test/compile-error/Sources/CompileError/CompileError.swift
func sum(_ x: Int, _ y: Int) {
  return x + y
}
